Have the project working hopefully

--- a/brevets/credentials.ini
+++ b/brevets/credentials.ini
@@ -1,6 +1,4 @@
-# Who dat?
 [DEFAULT]
-author = Michal Young
-repo = https://github.com/UO-CIS-322/proj4-brevets
+author = Ben Massey
+repo = https://github.com/BenjaminMassey/proj4-brevets
 PORT = 5000
-SECRET_KEY = When all else fails
