--- a/brevets/Dockerfile
+++ b/brevets/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3
-MAINTAINER Ram Durairajan "noemail@website.domain"
+MAINTAINER Ben Massey "benjamin.w.massey@gmail.com"
 RUN apt-get update -y
 RUN apt-get install -y python-pip python-dev build-essential
 COPY . /app
